--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -4,16 +4,17 @@
     Welcome to {{ title }}!
   </h1>
 </div>
+<button (click)="getTasksFromService()">Get All Tasks</button>
 <h2>All the tasks: </h2>
 <ul>
   <li *ngFor="let task of tasks"> 
-    {{ task }}
+    {{ task["title"] }}
+    <button (click)="getTaskById(task['_id'])">SHOW</button>
   </li>
 </ul>
-<h2>The third task:</h2>
-<ul>
-  <li *ngIf="tasks[2]"> 
-    {{ tasks[2] }}
-  </li>
-</ul>
+<h2 *ngIf="selectedTask">
+  {{ selectedTask['title'] }}:
+  {{ selectedTask['description'] || "no description" }}
+</h2>
+
 
