--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -4,17 +4,50 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<button (click)="getTasksFromService()">Get All Tasks</button>
-<h2>All the tasks: </h2>
-<ul>
-  <li *ngFor="let task of tasks"> 
-    {{ task["title"] }}
-    <button (click)="getTaskById(task['_id'])">SHOW</button>
-  </li>
-</ul>
-<h2 *ngIf="selectedTask">
-  {{ selectedTask['title'] }}:
-  {{ selectedTask['description'] || "no description" }}
-</h2>
+<h2 class="ml-2">New Task</h2>
+<form class="form-group ml-2" (submit)="submitNew()">
+  <div class="form-group-item">
+    <label>Title: 
+      <input class="form-control" type="text" name="newTask.title" [(ngModel)]="newTask.title">
+    </label>
+  </div>
+  <div class="form-group-item">
+    <label>Description:
+      <input class="form-control" type="text" name="newTask.description" [(ngModel)]="newTask.description">
+    </label>
+  </div>
+  <input class="btn btn-outline-dark" type="submit" value="Create task">
+</form>
 
+<div class="row">
+  <div class="col-7 ml-2">
+    <h2>Task List</h2>
+    <ul class="list-group" style="height:300px; overflow: scroll;">
 
+      <li *ngFor="let task of tasks" class="list-group-item">
+        <h3>{{ task['title'] }}</h3>
+        <p>{{ task['description'] || "No description" }}</p>
+        <button (click)="setSelectedTask(task)" class="btn btn-info mr-2">Edit</button>
+        <button (click)="deleteTask(task)" class="btn btn-danger">Delete</button>
+      </li>
+
+    </ul>
+  </div>
+
+  <div *ngIf="selectedTask" class="col-4 mr-2 ml-5">
+    <h2>Edit Task</h2>
+    <form (submit)="editTask(selectedTask)" class="form-group">
+      <div class="form-group-item">
+        <label>Title: 
+          <input class="form-control" type="text" name="selectedTask.title" [(ngModel)]="selectedTask.title">
+        </label>
+      </div>
+      <div class="form-group-item">
+        <label>Description: 
+          <input class="form-control" type="text" name="selectedTask.description" [(ngModel)]="selectedTask.description">
+        </label>
+      </div>
+      <input class="btn btn-outline-dark" type="submit" value="Edit">
+    </form>
+  </div>
+</div>
